[gd_scene load_steps=5 format=3 uid="uid://bd1g5ayqykp23"]

[ext_resource type="Script" uid="uid://dbg31nkkqo4rm" path="res://script-obstacles/iceblock_winter'.gd" id="1_tm042"]
[ext_resource type="Texture2D" uid="uid://dwa8lh0npcy4b" path="res://winter sprite/iceblock_winter-sheet.png" id="2_gupje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5luvj"]
size = Vector2(16, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7uhcv"]
size = Vector2(16, 3)

[node name="iceblock_winter\'" type="Node2D"]
script = ExtResource("1_tm042")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_gupje")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D_A" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_5luvj")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D_B" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_7uhcv")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
